<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pergunta1">Type the first number</string>
    <string name="pergunta2">Type the second number</string>
    <string name="resultado">Result</string>
    <string name="escolha">Choose one option</string>
    <string name="soma">Sum</string>
    <string name="subtracao">Subtraction</string>
    <string name="multiplicacao">Multiple</string>
    <string name="divisao">Divide</string>
    <string name="calcular">Calculate</string>
    <string name="limpar">Clear</string>
    
</resources>
