<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta1" />
    
    <EditText
        android:id="@+id/num1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="number" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta2" />
    
    <EditText
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="number" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolha" />
    
    <RadioGroup
        android:id="@+id/rgopcoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
                
        <RadioButton
            android:id="@+id/soma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/soma" />
        
        <RadioButton
            android:id="@+id/sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtracao" />
        
        <RadioButton
            android:id="@+id/mult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplicacao" />
        
        <RadioButton
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escolha" />
    	
	</RadioGroup>

</LinearLayout>
